--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Add"></activity>
+        <activity android:name=".OtherMap"></activity>
+        <activity android:name=".Usermap" />
+        <activity android:name=".FollowHistory" />
+        <activity android:name=".Requests" />
+        <activity android:name=".View" />
+        <activity android:name=".Edit" />
+        <activity android:name=".Add" />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
