--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OtherMap"></activity>
+        <activity android:name=".MoodHistory"></activity>
+        <activity android:name=".OtherMap" />
         <activity android:name=".Usermap" />
         <activity android:name=".FollowHistory" />
         <activity android:name=".Requests" />
