--- a/Code/local.properties
+++ b/Code/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 04 15:42:53 MST 2019
-sdk.dir=C\:\\Users\\Allen\\AppData\\Local\\Android\\Sdk
+#Tue Nov 05 17:36:03 MST 2019
+sdk.dir=C\:\\Users\\Owen\\AppData\\Local\\Android\\Sdk
