--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MoodHistory"></activity>
+        <activity android:name=".AddMapActivity"></activity>
+        <activity android:name=".MoodHistory" />
         <activity android:name=".OtherMap" />
         <activity android:name=".Usermap" />
         <activity android:name=".FollowHistory" />
@@ -19,11 +22,18 @@
         <activity android:name=".Add" />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
+            <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDUU8US1BfTI7KzB6ddS5bgtxsRk77RP1k"/>
     </application>
+
 </manifest>
