--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddMapActivity"></activity>
+        <activity android:name=".ViewMapActivity"></activity>
+        <activity android:name=".AddMapActivity" />
         <activity android:name=".MoodHistory" />
         <activity android:name=".OtherMap" />
         <activity android:name=".Usermap" />
@@ -24,16 +26,18 @@
         <activity android:name=".MainActivity">
             <meta-data
                 android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version"/>
+                android:value="@integer/google_play_services_version" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDUU8US1BfTI7KzB6ddS5bgtxsRk77RP1k"/>
+            android:value="AIzaSyDUU8US1BfTI7KzB6ddS5bgtxsRk77RP1k" />
     </application>
 
 </manifest>
