--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".Edit" />
         <activity android:name=".Add" />
         <activity android:name=".Login" />
+        <activity android:name=".EditMapActivity"/>
         <activity android:name=".MainActivity">
             <meta-data
                 android:name="com.google.android.gms.version"
