--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".Add" />
         <activity android:name=".Login" />
         <activity android:name=".EditMapActivity"/>
+        <activity android:name=".FollowActivity"/>
         <activity android:name=".MainActivity">
             <meta-data
                 android:name="com.google.android.gms.version"
