--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewMapActivity"></activity>
+        <activity android:name=".Community"></activity>
+        <activity android:name=".ViewMapActivity" />
         <activity android:name=".AddMapActivity" />
         <activity android:name=".MoodHistory" />
         <activity android:name=".OtherMap" />
@@ -23,7 +24,7 @@
         <activity android:name=".Edit" />
         <activity android:name=".Add" />
         <activity android:name=".Login" />
-        <activity android:name=".EditMapActivity"/>
+        <activity android:name=".EditMapActivity" />
         <activity android:name=".MainActivity">
             <meta-data
                 android:name="com.google.android.gms.version"
