--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
