--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/glo_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/glo_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewMapActivity"></activity>
-        <activity android:name=".AddMapActivity" />
-        <activity android:name=".MoodHistory" />
-        <activity android:name=".OtherMap" />
-        <activity android:name=".Usermap" />
-        <activity android:name=".FollowHistory" />
-        <activity android:name=".Requests" />
-        <activity android:name=".ViewMood" />
-        <activity android:name=".Edit" />
-        <activity android:name=".Add" />
         <activity android:name=".Login" />
-        <activity android:name=".EditMapActivity"/>
+        <activity android:name=".MoodHistory" />
+        <activity android:name=".Add" />
+        <activity android:name=".AddMapActivity" />
+        <activity android:name=".Edit" />
+        <activity android:name=".EditMapActivity" />
+        <activity android:name=".Usermap" />
+        <activity android:name=".OtherMap" />
+        <activity android:name=".ViewMood" />
+        <activity android:name=".ViewMapActivity" />
+        <activity android:name=".Community" />
+        <activity android:name=".Requests" />
+        <activity android:name=".FollowActivity" />
         <activity android:name=".MainActivity">
             <meta-data
                 android:name="com.google.android.gms.version"
@@ -39,6 +43,15 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDUU8US1BfTI7KzB6ddS5bgtxsRk77RP1k" />
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.android.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
+        </provider>
     </application>
 
 </manifest>
